[package]
name = "numext-constructor"
version = "0.1.0"
authors = [
    "Boyu Yang <yangby@cryptape.com>",
    "zhangsoledad <787953403@qq.com>",
]
edition = "2018"
description = "Fixed-size uint and hash constructor."
homepage = "https://yangby-cryptape.github.io/rust-numext/"
repository = "https://github.com/yangby-cryptape/rust-numext"
keywords = ["fixed", "hash", "uint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "yangby-cryptape/rust-numext" }
