[package]
name = "numext-constructor"
version = "0.1.3"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Fixed-size uint and hash constructor."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "hash", "uint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
syn = { version = "~0.15", features = ["extra-traits"] }
quote = "~0.6"
proc-macro2 = "~0.4"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
