[package]
name = "nfhash-tests"
version = "0.1.0"
authors = [
    "Boyu Yang <yangby@cryptape.com>",
    "zhangsoledad <787953403@qq.com>",
]
edition = "2018"
publish = false
autobenches = false

[dependencies]
nfhash = { package = "numext-fixed-hash", version = "~0.1.0", path = "../fixed-hash", features = ["support_all"] }
etypes = { package = "ethereum-types", version = "~0.4" }
proptest = "~0.8"
rand = "~0.5"

[dev-dependencies]
criterion = "~0.2"
serde_json = "~1.0"

[[bench]]
name = "ext_serde"
harness = false
