[package]
name = "nfhash-tests"
version = "0.1.5"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
publish = false
autobenches = false

[dependencies]
nfhash = { package = "numext-fixed-hash", version = "~0.1.5", path = "../fixed-hash", features = ["support_all"] }
etypes = { package = "ethereum-types", version = "~0.8" }
proptest = "~0.9"
rand = "~0.7"

[dev-dependencies]
criterion = "~0.3"
serde_json = "~1.0"

[[bench]]
name = "ext_serde"
harness = false
