[package]
name = "numext-fixed-hash"
version = "0.1.2"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Fixed-size hash types."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "hash", "bignum"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
numext-constructor = { version = "~0.1.2", path = "../constructor" }
nfuint = { package = "numext-fixed-uint", version = "~0.1.2", path = "../fixed-uint" }
failure = "~0.1"
rand = { version = "~0.5", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }
faster-hex = { version = "~0.1", optional = true }

[features]
default = []
support_all = ["support_rand", "support_heapsize", "support_serde"]
support_rand = ["rand", "nfuint/support_rand"]
support_heapsize = ["heapsize", "nfuint/support_heapsize"]
support_serde = ["serde", "faster-hex", "nfuint/support_serde"]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
