[package]
name = "numext-fixed-hash"
version = "0.1.4"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Fixed-size hash types."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "hash", "bignum"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
numext-fixed-hash-core = { version = "=0.1.4", path = "core" }
numext-fixed-hash-hack = { version = "=0.1.4", path = "hack" }
proc-macro-hack = "~0.5"

[features]
default = []
support_all = ["support_rand", "support_heapsize", "support_serde"]
support_rand = ["numext-fixed-hash-core/support_rand", "numext-fixed-hash-hack/support_rand"]
support_heapsize = ["numext-fixed-hash-core/support_heapsize", "numext-fixed-hash-hack/support_heapsize"]
support_serde = ["numext-fixed-hash-core/support_serde", "numext-fixed-hash-hack/support_serde"]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
