[package]
name = "numext-fixed-uint-macros"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

[lib]
proc-macro = true


[features]
default = []
rand = []
serde = []
heapsize = []
