[package]
name = "numext-fixed-uint-tests"
version = "0.1.0"
authors = [
    "Boyu Yang <yangby@cryptape.com>",
    "zhangsoledad <787953403@qq.com>",
]
autobenches = false

[dependencies]
numext-fixed-uint = { path = "../fixed-uint", features = ["support_all"] }
ethereum-types = "0.4.0"
proptest = "0.8"
rand = "0.5"

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"

[[bench]]
name = "std_ops_arith"
harness = false

[[bench]]
name = "std_ops_shift"
harness = false

[[bench]]
name = "ext_serde"
harness = false
