[package]
name = "nfuint_tests"
version = "0.1.0"
authors = [
    "Boyu Yang <yangby@cryptape.com>",
    "zhangsoledad <787953403@qq.com>",
]
edition = "2018"
autobenches = false

[dependencies]
nfuint = { path = "../fixed-uint", features = ["support_all"], package = "numext-fixed-uint" }
etypes = { version = "0.4", package = "ethereum-types" }
num-bigint = "0.2"
num-integer = "0.1"
proptest = "0.8"
rand = "0.5"

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"

[[bench]]
name = "std_ops_arith"
harness = false

[[bench]]
name = "std_ops_shift"
harness = false

[[bench]]
name = "int_math"
harness = false

[[bench]]
name = "ext_serde"
harness = false
