[package]
name = "nfuint-tests"
version = "0.1.5"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
publish = false
autobenches = false

[dependencies]
nfuint = { package = "numext-fixed-uint", version = "~0.1.5", path = "../fixed-uint", features = ["support_all"] }
etypes = { package = "ethereum-types", version = "~0.8" }
num-bigint = "~0.2"
num-integer = "~0.1"
proptest = "~0.9"
rand = "~0.7"

[dev-dependencies]
criterion = "~0.3"
serde_json = "~1.0"

[[bench]]
name = "std_ops_arith"
harness = false

[[bench]]
name = "std_ops_shift"
harness = false

[[bench]]
name = "int_math"
harness = false

[[bench]]
name = "ext_serde"
harness = false
