[package]
name = "numext-fixed-uint"
version = "0.1.2"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Fixed-size uint types."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
numext-constructor = { version = "~0.1.2", path = "../constructor" }
failure = "~0.1"
rand = { version = "~0.5", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }

[features]
default = []
support_all = ["support_rand", "support_heapsize", "support_serde"]
support_rand = ["rand"]
support_heapsize = ["heapsize"]
support_serde = ["serde"]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
