[package]
name = "numext-fixed-uint"
version = "0.1.2"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Fixed-size uint types."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
numext-fixed-uint-core = { path = "core" }
numext-fixed-uint-hack = { path = "hack" }
proc-macro-hack = "~0.5"

[features]
default = []
support_all = ["support_rand", "support_heapsize", "support_serde"]
support_rand = ["numext-fixed-uint-core/support_rand", "numext-fixed-uint-hack/support_rand"]
support_heapsize = ["numext-fixed-uint-core/support_heapsize", "numext-fixed-uint-hack/support_heapsize"]
support_serde = ["numext-fixed-uint-core/support_serde", "numext-fixed-uint-hack/support_serde"]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
