[package]
name = "numext-fixed-uint"
version = "0.1.6"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Fixed-size uint types."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
nfuint-core = { package ="numext-fixed-uint-core", version = "=0.1.6", path = "core" }
nfuint-hack = { package ="numext-fixed-uint-hack", version = "=0.1.6", path = "hack" }

[features]
default = ["bits_all"]
bits_all = [
    "bits_128", "bits_160", "bits_224", "bits_256", "bits_384", "bits_512",
    "bits_520", "bits_1024",  "bits_2048", "bits_4096",
]
support_all = ["support_rand", "support_heapsize", "support_serde"]
bits_128 =  ["nfuint-core/bits_128" , "nfuint-hack/bits_128" ]
bits_160 =  ["nfuint-core/bits_160" , "nfuint-hack/bits_160" ]
bits_224 =  ["nfuint-core/bits_224" , "nfuint-hack/bits_224" ]
bits_256 =  ["nfuint-core/bits_256" , "nfuint-hack/bits_256" ]
bits_384 =  ["nfuint-core/bits_384" , "nfuint-hack/bits_384" ]
bits_512 =  ["nfuint-core/bits_512" , "nfuint-hack/bits_512" ]
bits_520 =  ["nfuint-core/bits_520" , "nfuint-hack/bits_520" ]
bits_1024 = ["nfuint-core/bits_1024", "nfuint-hack/bits_1024"]
bits_2048 = ["nfuint-core/bits_2048", "nfuint-hack/bits_2048"]
bits_4096 = ["nfuint-core/bits_4096", "nfuint-hack/bits_4096"]
support_rand     = ["nfuint-core/support_rand"    , "nfuint-hack/support_rand"    ]
support_heapsize = ["nfuint-core/support_heapsize", "nfuint-hack/support_heapsize"]
support_serde    = ["nfuint-core/support_serde"   , "nfuint-hack/support_serde"   ]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
