[package]
name = "numext-fixed-hash-core"
version = "0.1.2"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
numext-constructor = { version = "~0.1.2", path = "../../constructor" }
failure = "~0.1"
rand = { version = "~0.5", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }
faster-hex = { version = "~0.1", optional = true }
numext-fixed-uint = { version = "~0.1.2", path = "../../fixed-uint" }

[features]
default = []
support_all = ["support_rand", "support_heapsize", "support_serde"]
support_rand = ["rand", "numext-fixed-uint/support_rand"]
support_heapsize = ["heapsize", "numext-fixed-uint/support_heapsize"]
support_serde = ["serde", "faster-hex", "numext-fixed-uint/support_serde"]
