[package]
name = "numext-fixed-hash-core"
version = "0.1.4"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "A internal crate used by numext-fixed-hash."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "hash", "bignum"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[dependencies]
constructor = { package = "numext-constructor", version = "=0.1.4", path = "../../constructor" }
nfuint = { package = "numext-fixed-uint", version = "=0.1.4", path = "../../fixed-uint" }
failure = "~0.1"
rand = { version = "~0.7", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }
faster-hex = { version = "~0.4", optional = true }

[features]
default = ["bits_all"]
bits_all = [
    "bits_128", "bits_160", "bits_224", "bits_256", "bits_384", "bits_512",
    "bits_520", "bits_1024",  "bits_2048", "bits_4096",
]
support_all = ["support_rand", "support_heapsize", "support_serde"]
bits_128 =  ["nfuint/bits_128" ]
bits_160 =  ["nfuint/bits_160" ]
bits_224 =  ["nfuint/bits_224" ]
bits_256 =  ["nfuint/bits_256" ]
bits_384 =  ["nfuint/bits_384" ]
bits_512 =  ["nfuint/bits_512" ]
bits_520 =  ["nfuint/bits_520" ]
bits_1024 = ["nfuint/bits_1024"]
bits_2048 = ["nfuint/bits_2048"]
bits_4096 = ["nfuint/bits_4096"]
support_rand     = ["rand",     "nfuint/support_rand"    ]
support_heapsize = ["heapsize", "nfuint/support_heapsize"]
support_serde    = ["serde",    "nfuint/support_serde"   , "faster-hex"]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
