[package]
name = "numext-fixed-hash-hack"
version = "0.1.6"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "A internal crate used by numext-fixed-hash."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "hash", "bignum"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
nfhash-core = { package = "numext-fixed-hash-core", version = "=0.1.6", path = "../core" }
syn = { version = "~1.0", features = ["extra-traits"] }
quote = "~1.0"
proc-macro2 = "~1.0"

[features]
default = ["bits_all"]
bits_all = [
    "bits_128", "bits_160", "bits_224", "bits_256", "bits_384", "bits_512",
    "bits_520", "bits_1024",  "bits_2048", "bits_4096",
]
support_all = ["support_rand", "support_heapsize", "support_serde"]
bits_128 =  ["nfhash-core/bits_128" ]
bits_160 =  ["nfhash-core/bits_160" ]
bits_224 =  ["nfhash-core/bits_224" ]
bits_256 =  ["nfhash-core/bits_256" ]
bits_384 =  ["nfhash-core/bits_384" ]
bits_512 =  ["nfhash-core/bits_512" ]
bits_520 =  ["nfhash-core/bits_520" ]
bits_1024 = ["nfhash-core/bits_1024"]
bits_2048 = ["nfhash-core/bits_2048"]
bits_4096 = ["nfhash-core/bits_4096"]
support_rand     = ["nfhash-core/support_rand"    ]
support_heapsize = ["nfhash-core/support_heapsize"]
support_serde    = ["nfhash-core/support_serde"   ]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
