[package]
name = "numext-fixed-uint-core"
version = "0.1.2"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
numext-constructor = { version = "~0.1.2", path = "../../constructor" }
failure = "~0.1"
rand = { version = "~0.5", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }

[features]
default = []
support_rand = ["rand"]
support_heapsize = ["heapsize"]
support_serde = ["serde"]
