[package]
name = "numext-fixed-uint-core"
version = "0.1.4"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "A internal crate used by numext-fixed-uint."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"


[dependencies]
numext-constructor = { version = "=0.1.4", path = "../../constructor" }
failure = "~0.1"
rand = { version = "~0.5", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }

[features]
default = []
support_rand = ["rand"]
support_heapsize = ["heapsize"]
support_serde = ["serde"]
