[package]
name = "numext-fixed-uint-core"
version = "0.1.6"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "A internal crate used by numext-fixed-uint."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"


[dependencies]
constructor = { package = "numext-constructor", version = "=0.1.6", path = "../../constructor" }
thiserror = "~1.0"
rand = { version = "~0.7", optional = true }
heapsize = { version = "~0.4", optional = true }
serde = { version = "~1.0", optional = true }

[features]
default = ["bits_all"]
bits_all = [
    "bits_128", "bits_160", "bits_224", "bits_256", "bits_384", "bits_512",
    "bits_520", "bits_1024",  "bits_2048", "bits_4096",
]
support_all = ["support_rand", "support_heapsize", "support_serde"]
bits_128 =  []
bits_160 =  []
bits_224 =  []
bits_256 =  []
bits_384 =  []
bits_512 =  []
bits_520 =  []
bits_1024 = []
bits_2048 = []
bits_4096 = []
support_rand     = ["rand"    ]
support_heapsize = ["heapsize"]
support_serde    = ["serde"   ]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
