[package]
name = "numext-fixed-uint-hack"
version = "0.1.3"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "A internal crate used by numext-fixed-uint."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
numext-fixed-uint-core = { version = "=0.1.3", path = "../core" }
proc-macro-hack = "~0.5"
syn = { version = "~0.15", features = ["extra-traits"] }
quote = "~0.6"
proc-macro2 = "~0.4"

[features]
default = []
support_rand = ["numext-fixed-uint-core/support_rand"]
support_heapsize = ["numext-fixed-uint-core/support_heapsize"]
support_serde = ["numext-fixed-uint-core/support_serde"]
