[package]
name = "numext-fixed-uint-hack"
version = "0.1.4"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "A internal crate used by numext-fixed-uint."
homepage = "https://cryptape.github.io/rust-numext/"
repository = "https://github.com/cryptape/rust-numext"
keywords = ["fixed", "uint", "bignum", "bigint"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
nfuint-core = { package = "numext-fixed-uint-core", version = "=0.1.4", path = "../core" }
syn = { version = "~1.0", features = ["extra-traits"] }
quote = "~1.0"
proc-macro2 = "~1.0"

[features]
default = ["bits_all"]
bits_all = [
    "bits_128", "bits_160", "bits_224", "bits_256", "bits_384", "bits_512",
    "bits_520", "bits_1024",  "bits_2048", "bits_4096",
]
support_all = ["support_rand", "support_heapsize", "support_serde"]
bits_128 =  ["nfuint-core/bits_128" ]
bits_160 =  ["nfuint-core/bits_160" ]
bits_224 =  ["nfuint-core/bits_224" ]
bits_256 =  ["nfuint-core/bits_256" ]
bits_384 =  ["nfuint-core/bits_384" ]
bits_512 =  ["nfuint-core/bits_512" ]
bits_520 =  ["nfuint-core/bits_520" ]
bits_1024 = ["nfuint-core/bits_1024"]
bits_2048 = ["nfuint-core/bits_2048"]
bits_4096 = ["nfuint-core/bits_4096"]
support_rand     = ["nfuint-core/support_rand"    ]
support_heapsize = ["nfuint-core/support_heapsize"]
support_serde    = ["nfuint-core/support_serde"   ]

[badges]
travis-ci = { repository = "cryptape/rust-numext" }
